--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 <script src="js/card.js"></script>
 <script src="js/form.js"></script>
 <script src="js/move.js"></script>
+<script src="js/load.js"></script>
 <script src="js/main.js"></script>
 <script src="js/popup.js"></script>
 
