--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес</label>
-          <input id="address" name="address" type="text" disabled>
+          <input id="address" name="address" type="text" readonly="readonly">
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
@@ -255,6 +255,7 @@
 <script src="js/form.js"></script>
 <script src="js/move.js"></script>
 <script src="js/load.js"></script>
+<script src="js/upload.js"></script>
 <script src="js/main.js"></script>
 <script src="js/popup.js"></script>
 
