--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
 <script src="js/move.js"></script>
 <script src="js/load.js"></script>
 <script src="js/upload.js"></script>
+<script src="js/inactivate.js"></script>
+<script src="js/activate.js"></script>
 <script src="js/main.js"></script>
 <script src="js/popup.js"></script>
 
