--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
 <script src="js/upload.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/inactivate.js"></script>
+<script src="js/message.js"></script>
 <script src="js/activate.js"></script>
 <script src="js/main.js"></script>
 <script src="js/popup.js"></script>
