--- a/index.html
+++ b/index.html
@@ -249,13 +249,11 @@
   </template>
 
 <script src="js/util.js"></script>
-<script src="js/data.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/card.js"></script>
 <script src="js/form.js"></script>
 <script src="js/move.js"></script>
-<script src="js/load.js"></script>
-<script src="js/upload.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/debounce.js"></script>
 <script src="js/inactivate.js"></script>
 <script src="js/message.js"></script>
